# homework_19.2

./: .env.sample  .gitignore  README.md  blog.json  catalog.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options_alter_blog_views_count.py  0003_blog_owner.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  servises.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0002_product_manufactured_at.py  0003_version.py  0004_alter_product_price.py  0005_product_owner.py  0006_alter_product_options_product_is_published.py
catalog/templates/: base.html  contacts.html  home.html  prod_detail.html  prod_list.html
catalog/templates/catalog/: base.html  category_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py
fnc/: config.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_email.py
users/templates/users/: login.html  recover_password.html  register.html  user_detail.html  user_form.html
