[tool.poetry]
name = "homework-19-2"
version = "0.1.0"
description = ""
authors = ["Anton Gromov <seed14112@yaandex.ru>"]
readme = "README.md"
packages = [{include = "homework_19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
black = "^24.4.2"
ipython = "^8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
