[tool.poetry]
name = "homework-19-2"
version = "0.1.0"
description = ""
authors = ["Anton Gromov <seed14112@yaandex.ru>"]
readme = "README.md"
packages = [{include = "homework_19"}]

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
ipython = "^8.26.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
pytils = "^0.4.1"
django = "4.2.2"
redis = "^5.0.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
